--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ build
 .env.development.local
 .env.test.local
 .env.production.local
-/nodemon.json
+nodemon.json
 
 npm-debug.log*
 yarn-debug.log*
