--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
 	"scripts": {
 		"start": "node server.js",
 		"server": "nodemon server.js",
-		"client": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"client": "craco start",
+		"build": "craco build",
+		"test": "craco test",
 		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"keywords": [],
 	"author": "Alfred Lewis",
 	"license": "ISC",
 	"dependencies": {
+		"@craco/craco": "^5.6.4",
+		"@material-ui/core": "^4.10.0",
+		"@material-ui/icons": "^4.9.1",
 		"axios": "^0.19.2",
 		"bcryptjs": "^2.4.3",
 		"express": "^4.17.1",
@@ -25,6 +28,7 @@
 		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-modal-hook": "^3.0.0",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-prop-types": "^1.0.4",
@@ -32,6 +36,7 @@
 		"react-scroll": "^1.7.16",
 		"react-select": "^3.1.0",
 		"react-spring": "^8.0.27",
+		"react-transition-group": "^4.4.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0",
@@ -39,6 +44,7 @@
 		"xlsx": "^0.16.1"
 	},
 	"devDependencies": {
+		"babel-plugin-import": "^1.13.0",
 		"concurrently": "^4.1.2",
 		"nodemon": "^1.19.4"
 	},
